[package]
name = "kglite-mcp-server"
version = "0.10.1"
edition = "2021"
authors = ["Kristian dF Kollsgård <kkollsg@gmail.com>"]
license = "MIT"
description = "MCP server for kglite knowledge graphs — pure-Rust single-binary frontend for cypher_query / graph_overview / save_graph / read_code_source plus the generic source / GitHub surface from mcp-methods. No libpython link."
readme = "README.md"
repository = "https://github.com/kkollsga/kglite"
homepage = "https://github.com/kkollsga/kglite"
documentation = "https://kglite.readthedocs.io/en/latest/python/guides/mcp-servers.html"
keywords = ["mcp", "model-context-protocol", "knowledge-graph", "cypher", "kglite"]
categories = ["database", "command-line-utilities"]

[[bin]]
name = "kglite-mcp-server"
path = "src/main.rs"

[dependencies]
# Generic MCP server framework (rmcp + manifest + source/github tools).
# Switched from git+rev to crates.io in 0.9.26+ — mcp-methods publishes
# there as of 0.3.30. Cargo.lock locks the exact version; bumps are
# explicit via `cargo update -p mcp-methods`. We still depend on the
# pure-Rust crate only (no pyo3 in tree, no libpython link).
mcp-methods = { version = "0.3", default-features = false, features = ["server"] }

# kglite (pure-Rust core) — no pyo3 in the resulting binary, no
# libpython link. The 0.10.1 lift moved KnowledgeGraph +
# source_location into kglite::api so mcp-server no longer needs
# to route through the kglite-py wheel crate (which would drag
# pyo3 along). The `fastembed` feature pulls in FastEmbedAdapter
# for `text_score()` semantic search. Local dev uses the path
# dep; `cargo publish` strips path and falls back to the version
# requirement, keeping this in lockstep with the kglite core
# version.
# Verified: `cargo tree -p kglite-mcp-server | grep pyo3` → empty.
kglite = { version = "0.10", path = "../kglite", default-features = false, features = ["fastembed"] }

# rmcp re-export for the dynamic tool registration path.
rmcp = { version = "1.6", features = ["server", "macros", "transport-io", "schemars"] }

# Async runtime + JSON
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "fs", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Error handling + CLI
anyhow = "1"
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CSV-over-HTTP server (extensions.csv_http_server). hyper 1.x with
# its server adapter from hyper-util — both are already in the
# resolved dep graph (rmcp uses hyper transitively), so this just
# surfaces them as direct deps for the csv_http module.
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "http1"] }
http-body-util = "0.1"
bytes = "1"
