[package]
name = "kglite-sec"
version = "0.0.1"
edition = "2021"
authors = ["Kristian dF Kollsgård <kkollsg@gmail.com>"]
license = "MIT"
description = "Pure-Rust SEC EDGAR loader for kglite knowledge graphs. Streams quarterly index files, bulk submissions, Form 4 / 13F / FSNDS, plus per-filing Exhibit 21 and 8-K parsers into preprocessed CSVs ready for kglite blueprint ingestion."

[lib]
name = "kglite_sec"
path = "src/lib.rs"

[dependencies]
# Error plumbing
thiserror = "1"

# Async HTTP + runtime (used by client/fetch; parsers stay sync)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "stream"] }

# Token bucket rate limiter — SEC's 10 req/s ceiling
governor = "0.7"

# Bulk archive readers
zip = { version = "2", default-features = false, features = ["deflate"] }

# JSON / serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CSV writer (output of extract step → blueprint input)
csv = "1"

# Streaming XML parser for Form 4 / 13F filings. Event-based — never
# builds a DOM, so memory cost is bounded regardless of filing size.
quick-xml = "0.36"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
