[package]
name = "kglite-sodir"
version = "0.0.1"
edition = "2021"
authors = ["Kristian dF Kollsgård <kkollsg@gmail.com>"]
license = "MIT"
description = "Pure-Rust Sodir FactMaps REST loader for kglite knowledge graphs. Paginates ArcGIS FeatureServer GeoJSON into preprocessed CSVs ready for kglite blueprint ingestion."

[lib]
name = "kglite_sodir"
path = "src/lib.rs"

[dependencies]
# Error plumbing
thiserror = "1"

# Async HTTP + runtime (used by client/fetch; pure modules stay sync)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }

# Token-bucket rate limiter — polite spacing on the FactMaps REST API
governor = "0.7"

# JSON / serde — GeoJSON pages, sodir_index.json
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CSV writer (output of fetch/preprocess → blueprint input)
csv = "1"

# ISO-8601 date conversion for ArcGIS epoch-ms timestamps.
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
